tests/e2e/semantics/output_assignment_existing_var6.story
http server as s
    when s listen path: "/" as s
        a = 1
